# giddy

./: Cargo.toml  README.md  plan.md
src/: cli.rs  git.rs  graph.rs  main.rs
