[package]
name = "gd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
camino = { version = "1.1.9", features = ["serde"] }
clap = { version = "4.5.27", features = ["cargo", "unstable-ext"] }
clap_complete = { version = "4.5.42", features = ["unstable-dynamic"] }
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.14.0"
petgraph = "0.7"
ptree = "0.5.2"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[patch.crates-io]
ptree = { git = "https://github.com/kaspar030/ptree" }
