[package]
name = "gd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
camino = { version = "1.1.9", features = ["serde"] }
clap = { version = "4.5.39", features = ["cargo", "unstable-ext"] }
clap_complete = { version = "4.5.52", features = ["unstable-dynamic"] }
indexmap = { version = "2.9.0", features = ["serde"] }
itertools = "0.14.0"
petgraph = "0.7"
ptree = "0.5.2"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[patch.crates-io]
ptree = { git = "https://github.com/kaspar030/ptree" }
